kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-days-website-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8181
      targetPort: 80
      protocol: TCP
  selector:
    app: ai-days-website
