kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-days-website-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ai-days.swiss-ai-center.ch
      http:
        paths:
          - path: "/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-days-website-service
                port:
                  number: 80
  tls:
    - hosts:
        - ai-days.swiss-ai-center.ch
      secretName: ai-days-swiss-ai-center-ch-tls-cert
